--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -95,10 +95,10 @@ $teaser-icon-size-desktop: 48px;
 }
 
 .main-content:last-child .service.service--full {
-  .service__units:last-child {
+  .component--service_units:last-child {
     // Make the keywords element go "under" the footer.
-    margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
-    padding-bottom: $spacing-double + $footer-koro-height;
+    margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-quadruple}));
+    padding-bottom: $spacing-triple + $footer-koro-height;
 
     @include breakpoint($breakpoint-l) {
       padding-bottom: $spacing-quadruple + $footer-koro-height;
@@ -194,11 +194,10 @@ $teaser-icon-size-desktop: 48px;
   margin-top: $spacing-quadruple;
 }
 
-.service__units {
+.component--service_units {
   background-color: $color-black-5;
-  margin-top: $spacing-double;
-  overflow: hidden;
-  padding-bottom: $spacing-and-half;
+  padding-bottom: $spacing-sextuple;
+  padding-top: $spacing-sextuple;
 
   .service__units__header {
     display: block;
