--- a/src/scss/layout/_main-content.scss
+++ b/src/scss/layout/_main-content.scss
@@ -1,12 +1,4 @@
 .main-content {
-  margin-top: $spacing-quadruple;
-
-  @include breakpoint($breakpoint-l) {
-    margin-top: $spacing-sextuple;
-  }
-}
-
-.main-content {
   width: 100%;
 }
 
